# ls_svgviewer

./: .gitignore  CHANGELOG  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
engine/core/: CMakeLists.txt  core_api.h  logger.cpp  logger.h  platform.cpp  platform.h  plugin.h  plugin_api.h  plugin_manager.cpp  plugin_manager.h
engine/graphics/: CMakeLists.txt  color.h  debug_renderer.cpp  debug_renderer.h  gdi_renderer.cpp  gdi_renderer.h  geometry.h  graphics_api.h  input_event.h  native_window.h  paint.h  primitive.h  render_target.h  renderer.h  scene.cpp  scene.h  view.cpp  view.h
engine/windowing/: CMakeLists.txt  sdk_window.cpp  sdk_window.h  windowing_api.h
plugins/hello_plugin/: CMakeLists.txt  hello_plugin.cpp
